<resources>
    <string name="SHARED_PREFS_FILE">RetoChacaoPreferences</string>
    <string name="KEY_INTRODUCTION">com.reto.chacao.IntroductionKey</string>
    <string name="EXTRAS_KEY_POI_ID">POI_ID</string>
    <string name="app_name">Movida Chacao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="app_title">Movida Chacao</string>
    <string name="app_description">Mantente informado de la movida cultural y deportiva de Chacao</string>
    <string name="text_or">or</string>
    <string name="btn_sign_email">No Registrarse</string>
    <string name="btn_sign_facebook">Conectate con Facebook</string>
    <string name="btn_log_in">Acceder</string>
    <string name="introduction_verification_info">Acabamos de enviarte un correo con un codigo de verificacion. Por favor revisa tu correo e ingresa el codigo aqui para activar tu cuenta</string>
    <string name="introduction_verification_code_hint">Codigo de verificacion</string>
    <string name="introduction_verification_btn_text">Verificar</string>
    <string name="introduction_verification_lost">¿Perdiste el codigo de verificacion?</string>
    <string name="introduction_get_verification_code">Obten tu codigo de verificacion</string>
    <string name="sing_up_screen_first_name_label">Nombre</string>
    <string name="sing_up_screen_last_name_label">Apellido</string>
    <string name="login_screen_email_label">Email</string>
    <string name="login_screen_password_label">Clave</string>
    <string name="login_screen_forgot_password">¿Olvidate tu contraseña?</string>
    <string name="login_screen_or">o</string>
    <string name="number_error">Es un numero invalido</string>
    <string name="email_error">No es un email valido</string>
    <string name="field_required">Este campo es obligatorio</string>
    <string name="email_request">Por favor ingresa tu correo electronico</string>
    <string name="button_next">Siguiente</string>
    <string name="button_buy">Comprar</string>
    <string name="facebook_app_id">396232603917182</string>
    <string name="facebook_button_login">Facebook</string>
    <string name="geolocation_toolbar_text">Encuentra grupos cerca de ti</string>
    <string name="geolocation_title">Vamos de detectar donde se encuentra</string>
    <string name="geolocation_btn_current_location">Localizacion actual</string>
    <string name="geolocation_enter_manually">Ingrese tu codigo zip</string>
    <string name="geolocation_alert_message">¿Estas seguro que deseas enviar el codigo zip
        %1$s?</string>
    <string name="geolocation_alert_positive">Si</string>
    <string name="geolocation_alert_negative">No</string>
    <string name="geolocation_zip_code_hint">10003</string>
    <string name="groups_init_toolbar_text">Grupos cerca de ti</string>
    <string name="groups_init_title">Encontrarmos %1$d grupos cerca de ti</string>
    <string name="groups_init_sub_title">Selecciona los grupos a los cuales te deseas unir y el moderador del grupo te respondera</string>
    <string name="groups_init_button_text">Solicitar invitacion</string>
    <string name="groups_init_empty_title">No hay grupos cerca</string>
    <string name="groups_init_empty_sub_title">Te contactaremos tan pronto como tengamos un grupo cerca de ti</string>
    <string name="groups_init_empty_okay_button">Okay</string>
    <string name="groups_init_empty_start_group">Tu tambien puedes crear tu propio grupo</string>
    <string name="groups_init_empty_start_group_button">Empezar mi propio grupo</string>
    <string name="groups_init_dialog">Obteniendo grupos...</string>
    <string name="groups_init_dialog_request">Enviando peticion a grupos...</string>
    <string name="progress_dialog_message">Por favor espere...</string>
    <string name="device_type_smartphone">Telefono inteligente</string>
    <string name="device_type_tablet">Tablet</string>
    <string name="facebook_login_error">Error iniciando sesion con facebook, por favor intente mas tarde</string>
    <string name="app_login_error">Error iniciando sesion, por favor intente mas tarde</string>
    <string name="app_device_not_supported">Este dispositvo no esta soportado</string>
    <string name="home_post_item_comment">%1$d comentario</string>
    <string name="home_post_item_comments">%1$d comentarios</string>
    <string name="home_tutorial_btn_home"> Busca articulos para comprar</string>
    <string name="home_tutorial_btn_add">Publica articulos para buscar o vender</string>
    <string name="home_tutorial_btn_profile">Tu perfil</string>
    <string name="home_popup_btn_text_add">Publica un objeto para vender</string>
    <string name="home_popup_btn_text_search">Estoy buscando...</string>
    <string name="filter_toolbar_title">Filtrar</string>
    <string name="filter_toolbar_btn_text">Guardar</string>
    <string name="filter_item_condition_header">Condicion</string>
    <string name="filter_category_header">Categoria</string>
    <string name="search_categories">Busqueda por categorias</string>
    <string-array name="group_arrays">
        <item>Pinecrest Marketplace</item>
        <item>Luttinger\'s store</item>
        <item>Ulises\'s Harris Hood</item>
    </string-array>
    <string name="group_prompt">Escoge un grupo</string>
    <string name="add_post_main_image_title">Imagen principal</string>
    <string name="add_post_toolbar_title">Publica un objeto para vender</string>
    <string name="add_post_button">Publica este objeto</string>
    <string name="add_post_title">¿Que estas vendiendo?</string>
    <string name="add_post_category">Vamos a hacer que sea facil para la gente encontrarlo</string>
    <string name="add_post_price"> ¿Por cuanto?</string>
    <string name="add_post_location_hint">Lugar</string>
    <string name="add_post_original_price">Precio original</string>
    <string name="add_post_credit_card">Procesan el impuesto de la tarjeta de credito: %1$s</string>
    <string name="add_post_condition">¿Cual es el estado del objeto?</string>
    <string name="add_post_description">Agrega una descripcion</string>
    <string name="search_post_toolbar_title">Estoy buscando...</string>
    <string name="search_post_title">¿Que estas buscando?</string>
    <string name="search_post_category">Vamos a hacer que sea para la gente responder</string>
    <string name="search_post_price">¿Cuanto quieres gastar?</string>
    <string name="search_post_comment">Agrega un comentario</string>
    <string name="search_post_button">Envia esta busqueda</string>
    <string name="payment_selection_message">Estas muy cerca de obtener este objeto</string>
    <string name="payment_method_title">Metodo de pago</string>
    <string name="credit_card_button">Paga con Tarjeta de Credito</string>
    <string name="paypal_button">Paga con PayPal</string>
    <string name="cash_payment_button">Pago en efectivo</string>
    <string name="toolbar_payments_options_title">Escoger metodo de pago</string>
    <string name="title_activity_payment_selection">ActividadSeleccionMetodoDePago</string>
    <string name="description_zoom_touch_close">Prueba</string>
    <string name="payments_finish_toolbar_title">Felicitacion</string>
    <string name="payments_finish_toolbar_subtitle">Este objeto no puede esperar a ir a casa contigo</string>
    <string name="banner_finish_payment_message">You reserva:</string>
    <string name="option_finish_payment_message">Aqui esta lo que puedes hacer despues:</string>
    <string name="contact_seller_finish_payment">Mensaje al vendedor</string>
    <string name="view_item_finish_paymet">Ver objeto</string>
    <string name="back_group_finish_payment">Ir a {Group Name}</string>
    <string name="share_facebook_finish_payment">Compartir en Facebook</string>
    <string name="share_twitter_finish_payment">Compartir en Twitter</string>
    <string name="message_seller_toolbar_title">Mensaje al vendedor</string>
    <string name="empty_comment_chat_hint">¿Que te gustaria decir?</string>
    <string name="message_seller_banner_text">Felicidades, este objeto no puede esperar ir a casa contigo.</string>
    <string name="send_button_text">Enviado</string>
    <string name="title_activity_credit_card_payment">ActividadTarjetaDeCreditoPago</string>
    <string name="notification_toolbar_title">Mis Notificaciones</string>
    <string name="notification_message_actionbar">Mensajes</string>
    <string name="notification_feed_actionbar">Feed</string>
    <string name="notification_progress_title">Obteniendo Mensajes...</string>
    <string name="profile_toolbar_title">Tu perfil</string>
    <string name="detail_post_add_comment_text">Mensaje al vendedor</string>
    <string name="commentCount">comentarios</string>
    <string name="send_a_message_edit_text_hint">¿Que te gustaria decir?</string>
    <string name="send_a_message_button_text">Enviado</string>
    <string name="new_credit_card_option_string">Usa una nueva tarjeta de credito</string>
    <string name="new_billing_address_option_string">Usa una nueva direccion de facturacion</string>
    <string name="btn_in_search_of">Tengo este objeto</string>
    <string name="willing_to_spend">Dispuesto a gastar %1$s</string>
    <string name="someone_is_in_search">Alguien esta en la busqueda de...\n %1$s</string>
    <string name="cvv_credit_card_form_string">CVV</string>
    <string name="credit_card_form_credit_string">Tarjeta de Credito</string>
    <string name="full_address_field_string">Direcion</string>
    <string name="city_address_string">Ciudad</string>
    <string name="zipcode_address_string">CodigoZip</string>
    <string name="hello_blank_fragment">Hola fragmento blanco</string>
    <string name="personal_information_string">Informacion Personal</string>
    <string name="personal_information_firstname">Primer</string>
    <string name="personal_information_lastname">Segundo</string>
    <string name="personal_information_email">Correo</string>
    <string name="personal_information_password">Clave</string>
    <string name="personal_information_address">Direccion</string>
    <string name="paypal_login_string">Iniciar sesion con PayPal</string>
    <string name="add_another_card_string">+ agregar otra tarjeta</string>
    <string name="log_out_paypal_string">Cerrar sesion de Paypal</string>
    <string name="account_privacy_string">Privacidad</string>
    <string name="public_toogle_main_string">Publico</string>
    <string name="public_toogle_secondary_string">(todos pueden ver mi perfil)</string>
    <string name="not_public_toogle_main_string">Publico OFF</string>
    <string name="not_public_toogle_secondary_string">(Solo yo puedo ver mi perfil)</string>
    <string name="settings_alerts_keywords">Palabras clave</string>
    <string name="spinner_category_promtp">Escoge una categoria</string>
    <string-array name="category_array">
        <item>Elige una Categoría</item>
        <item>Conciertos</item>
        <item>Teatro</item>
        <item>Danza</item>
        <item>Aire Libre</item>
        <item>Caminata</item>
        <item>Maratón</item>
        <item>Fútbol</item>
        <item>Basketball</item>
    </string-array>
    <string name="terms_and_conditions">
        <![CDATA[<p>Al continuar usted acepta los
        <a href="myscheme://www.clamour.net/terms-and-conditions">Terminos y Condiciones</a>
        y confirma que ha leido nuestra <a href="myscheme://www.clamour.net/privacy">Politica de Privadicad</a></p>]]>
    </string>
    <string name="soldByText">Vendido por:</string>
    <string name="whyFlagText">¿Por que quieres reportar esta publicacion?</string>
    <string name="thankForFlag">Gracias por marcar esta publicacion . El administrador del grupo revisará este tema y cualquier cambio o decisión será hecha dentro de las próximas 24 horas</string>
    <string name="inappropiate_flag_text">inapropiado</string>
    <string name="counterfeit_flag_text">falsificacion</string>
</resources>