<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <include layout="@layout/toolbar_login_and_singup_navigation"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <TextView
            style="@style/formLabels"
            android:text="@string/login_screen_email_label"/>

        <EditText
            android:id="@+id/login_form_email"
            style="@style/formEditText"
            android:hint="@string/login_screen_email_label"
            />


        <TextView
            style="@style/formLabels"
            android:layout_width="fill_parent"
            android:text="@string/login_screen_password_label"/>

        <EditText
            android:id="@+id/login_form_password"
            style="@style/formEditText"
            android:hint="@string/login_screen_password_label"
            android:password="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/login_screen_forgot_password"
            android:textColor="#FFD8CA"/>

    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/divider_or"/>

    <FrameLayout
        android:id="@+id/login_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>