<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin_payments"
            android:text="@string/account_privacy_string"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="17sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/standard_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/standard_margin"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/account_privacy_main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/message_seller_send_text_size"
                    android:text="@string/not_public_toogle_main_string"/>

                <TextView
                    android:id="@+id/account_privacy_secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/settings_account_privacy_subtext_size"
                    android:text="@string/not_public_toogle_secondary_string"
                    />

            </LinearLayout>

            <!-- Cambiar po run boton para logout de facebook-->
            <ToggleButton
                android:id="@+id/account_privacy_toogle"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textOn=""
                android:textOff=""
                android:background="@drawable/settings_privacy_toogle"/>


        </RelativeLayout>




    </LinearLayout>


</LinearLayout>